add swagger model example data.
